# EquiForge

./: .gitattributes  .gitignore  Dev_Notebook.ipynb  Equirectangular Transforms.ipynb  Notebook_Dev.ipynb  Notebook_Sample.ipynb  README.md  persp2equir.py  pixi.toml  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package-tests.yml  python-package.yml  python-publish.yml  upload-python-package-pypi.yml
equiforge/: __init__.py  _version.py  cli.py
equiforge/converters/: equi2pers.py  pers2equi.py  persp2equir.py
equiforge/utils/: projection_utils.py  sampling.py
tests/: test_converters.py  test_integration.py  test_utils.py
