[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "equiforge"
description = "A toolkit for equirectangular image processing"
authors = [
    {name = "Mikkel Kappel Persson", email = "mikkelkp@hotmail.com"},
]
requires-python = ">=3.7"
keywords = ["equirectangular", "panorama", "image processing", "360"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.53.0",
    "Pillow>=8.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mikkelkappelpersson/equiforge"

[project.optional-dependencies]
viz = ["matplotlib>=3.4.0"]
dev = ["pytest>=6.0.0", "jupyter>=1.0.0", "matplotlib>=3.4.0"]
cuda = ["cupy-cuda12x>=12.0.0"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
write_to = "equiforge/_version.py"

[tool.setuptools]
packages = ["equiforge"]
